--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Survey Form</title>
     <style>
         /* Hide the token field */
-        .hidden-field {
+        input[type="text"][name="entry.TOKEN_FIELD"] {
             display: none;
         }
     </style>
 </head>
 <body>
-    <iframe id="surveyForm" src="https://docs.google.com/forms/d/e/1FAIpQLSdXajguD75jfqNXm7Ly834m-IoTTg_K3AE3u5FnhgkbgCg06Q/viewform?usp=pp_url&entry.1114183942=TOKEN" width="100%" height="800px"></iframe>
+    <iframe id="surveyForm" src="https://docs.google.com/forms/d/e/FORM_ID/viewform" width="100%" height="800px"></iframe>
     <script>
         window.onload = function() {
             let uniqueToken = localStorage.getItem('uniqueToken');
@@ -30,7 +30,6 @@
 
                 if (tokenField) {
                     tokenField.value = uniqueToken;
-                    tokenField.parentElement.classList.add('hidden-field');
                 }
             };
         };
